<resources>
  <string name="app_name">CommercialPay</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>

  <string name="accessibility_description">万户宝-需要打开</string>
  <string name="account">账号：</string>
  <string name="account_hint">请输入您的账号</string>
  <string name="password">密码：</string>
  <string name="password_hint">请输入您的密码</string>
  <string name="login">登陆</string>
  <string name="sign_in">注册</string>
  <string name="today_income">今日账号收入(元)</string>
  <string name="balance_formate">余额:%1s元</string>
</resources>
